--- a/pom.xml
+++ b/pom.xml
@@ -3,9 +3,9 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>com.schedgy</groupId>
-	<artifactId>com.schedgy</artifactId>
-	<packaging>war</packaging>
+	<groupId>edu.uwb.css</groupId>
+	<artifactId>voxel</artifactId>
+	<packaging>jar</packaging>
 	<version>1.0-SNAPSHOT</version>
 
 	<properties>
